--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+api.security.token.secret=my-secret-key
+
 # H2 Client
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
